# gmtn-chat-ai

./: README.md  bot.py  constants.py  pyproject.toml  requirements.txt
config/: constants.py  settings.py
services/: logger.py  model_service.py
ui/: chat.py  sidebar.py
