[project]
name = "gmtn-chat-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.6",
    "gspread>=6.2.1",
    "langchain-core>=1.2.18",
    "langchain-google-genai>=4.2.1",
    "oauth2client>=4.1.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
